src/objects/StringCatalogItem__c.object
<CustomObject>
    <fields>
        <fullName>EnumCode__c</fullName>
        <label>EnumCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>StringCatalogItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>StringCatalogView</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EnumCode__c</columns>
        <columns>Language__c</columns>
        <columns>Text__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>StringCatalogView</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StringCatalogItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>